src/assets/styles/responsive.scss
@media only screen and (max-width: 990px) {
  .capsule-card-container {
    width: 390px !important;
    height: 590px !important;
  }
  .section-title h2,
  h2 {
    font-size: 24px !important;
  }
  h3 {
    font-size: 20px !important;
  }
  .signin {
    height: 560px !important;
    margin-top: 90px;
  }
  .capsules-page,
  .topics-page,
  .create-capsule-page {
    .card-section {
      margin: 0 10px;
      padding-top: 2rem !important;
      margin-bottom: 0px !important;
      .carousel-card {
        margin-bottom: 20px;
        padding-bottom: 20px;
        height: auto;
        &:hover {
          transform: none !important;
        }
      }
    }
  }
  .mat-tab-links {
    .w-50 {
      width: auto !important;
    }
  }
  .topics-card {
    margin: 0 0 20px !important;
    &:hover {
      transform: none !important;
    }
  }
  .onOverlayContent {
    position: absolute;
    z-index: 1;
    background: rgba(255, 255, 255, 0.8);
    height: 277px;
  }
  .community-page,
  .mission-page {
    p {
      font-size: 18px !important;
      line-height: 28px !important;
    }
    .tech-repo {
      background-position: center !important;
      .inline-points {
        li {
          margin-left: 0 !important;
        }
      }
    }
  }
  .community-page {
    .part-2 {
      padding-top: 30px !important;
    }
    .part-3,
    .part-4 {
      padding: 30px 0 !important;
    }
  }
  input,
  textarea {
    font-size: 16px !important;
  }
  .admin-page {
    &.p-main {
      padding: 90px 30px 30px !important;
    }
    .mat-tab-links {
      max-width: 1600px !important;
    }
    h1 {
      font-size: 22px !important;
    }

    .resp-btn {
      justify-content: center;
      display: flex;
      padding-top: 20px;
      .action-btn {
        margin-right: 20px;
      }
    }
  }
  .create-topic-form {
    display: contents !important;
    .column {
      width: 100% !important;
    }
  }
  .badge-danger {
    top: 17px !important;
    left: 105px !important;
    border: 1px solid #fff;
  }
  .nav-menu .active > a {
    color: $white!important;
  }
  .dropdown {
    padding-bottom: 10px !important;
  }
  .back-link {
    font-size: 14px !important;
    span {
      &:first-child{
        margin-left: 0 !important;
        display: block;
      }
      &:nth-child(2) {
        margin-left: 0 !important;
      }
    }
  }
  .mission-page, .community-page {
  .tech-learning {
      padding: 40px 0 !important;
    }
   h2 {
    margin-bottom: 0 !important;
   }
  }
  #header .header-align {
    height: 75px !important;
    padding: 0;
  }
  .navbar-toggler-icon {
    width: 25px;
    height: 30px;
  }
  .contribute-page {
    .contribute-bg {
      padding-bottom: 40px !important;
    }

    .contribute-bg, .contribute-form-bg {
      height: auto !important;
    }
  }
  .capsule-top {
    padding-top: 0 !important;
  }
  .follow-us {
    margin-top: 20px !important;
  }
  h1{
    padding-bottom: 0 !important;
  }
  .tags {
    max-height: 480px !important;
  }
  .topic-apply {
    text-align: center !important;
  }
}
@media only screen and (width: 1024px) {
  .col-card {
    justify-content: center!important;
  }
  .nav-menu > ul > li {
    padding: 10px 3rem !important;
  }
  .capsule-card-container {
    width: 410px !important;
    margin-right: 20px;
  }
}
@media only screen and (width: 768px) {

  h1{
    line-height: 44px !important;
    font-size: 30px !important;
  }
  .banner-text {
    margin-top: 0 !important;
    text-align: center;
  }
  .carousel-caption,
  .sliderContent {
    position: initial !important;
    .hero-img {
      width: 450px;
      justify-content: center;
      padding-bottom: 20px;
      display: flex;
    }
  }
  .topics-card {
    margin: 8px !important;
  }
  .capsule-card-container {
    width: 350px !important;
    height: 590px !important;
}
.carousel .carousel-inner .carousel-item {
  height: 535px !important;
}
.p-carousel .p-carousel-content .p-carousel-prev, .p-carousel .p-carousel-content .p-carousel-next {
  margin: 0 !important;
  display: none;
}
}
@media only screen and (max-width: 767px) { 
  .banner-text {
    text-align: center !important;
  }
  .carousel-card .content .title {
    min-height: inherit !important;
    margin-bottom: 20px;
  }
  .mission-page {
    .tech-learning {
      padding-top: 0px !important;
    }
    .p-bottom-150 {
      padding-bottom: 30px !important;
    }
  }

  .footer-links {
    width: 100% !important;
  }
  .hero-img {
    text-align: center;
  }
}


/*******iPhone 10 mobile responsive******/
@media only screen and (min-device-width: 375px)and (max-device-width: 414px) {

.capsule-card-container {
  width: 355px !important;
  height: 575px !important;
}
.home-page {
  .capsule-card-container {
    width: 99% !important;
    align-items: center;
  }
}
.p-carousel .p-carousel-content .p-carousel-prev, .p-carousel .p-carousel-content .p-carousel-next {
  margin: 0 !important;
  display: none;
}
.capsule-card .card-content {
  padding: 0 15px !important;
}
.p-carousel .p-carousel-indicators .p-carousel-indicator button {
  width: 1rem!important;
}
.contribute-page .button {
  width: 115px !important;
  height: 45px;
}
}

